--- a/config
+++ b/config
@@ -2,3 +2,4 @@ C:\Heaven\YummyBaked\SuperWemon4\SuperWemon1\club6
 D:\paradise\stuff\Essence\Images\Considerable
 D:\paradise\stuff\Essence\Images\BeautyExpress
 D:\paradise\stuff\Essence\Images\CaughtInAct
+D:\paradise\stuff\Essence\Images\Warriors
