checkbox size increased

--- a/config
+++ b/config
@@ -1,4 +1,4 @@
-C:\Heaven\YummyBaked\SuperWemon4\SuperWemon1\club6
+C:\Heaven\YummyBaked\SuperWemon4\SuperWemon1\club4\club3
 D:\paradise\stuff\Essence\Images\Considerable
 D:\paradise\stuff\Essence\Images\BeautyExpress
 D:\paradise\stuff\Essence\Images\CaughtInAct
